fix <code> overflow

--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -110,6 +110,9 @@ code {
     background: $code;
     border-radius: $rad;
     font-family: monospace;
+    max-width: 100%;
+    overflow-wrap: break-word;
+    overflow:auto;
 }
 
 .language-plaintext {
